<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home1"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        />

    <item
        android:id="@+id/request"
        android:icon="@drawable/request"
        android:title="@string/request"
        />

    <item
        android:title="@string/update"
        android:id="@+id/update"
        android:icon="@drawable/ic_baseline_update_24"
        />

    <item android:title="@string/news"
        android:id="@+id/news"
        android:icon="@drawable/ic_baseline_info_24"
        />

    <item
        android:title="@string/profile"
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_person_24"
        />




</menu>