<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Activities.ResetPassWordActivity">


    <ImageView
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:src="@drawable/download"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reset_pass"
        android:hint="@string/email"
        android:fontFamily="@font/latobold"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reset_btn"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/latobold"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/reset"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/latobold"
        android:text="@string/resettext"
        />



</LinearLayout>