<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:fontFamily="@font/lato_regular"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_name_til"
        android:layout_margin="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_name_et"
        android:fontFamily="@font/lato_regular"
        android:textSize="18sp"
        android:drawablePadding="5dp"
        android:hint="@string/name"
        android:padding="10dp"
        />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_email_til"
        android:layout_margin="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reg_email_et"
            android:textSize="18sp"
            android:fontFamily="@font/lato_regular"
            android:inputType="textEmailAddress"
            android:drawablePadding="5dp"
            android:hint="@string/email"
            android:padding="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_phone_til"

        android:layout_margin="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reg_phone_et"
            android:textSize="18sp"
            android:fontFamily="@font/lato_regular"
            android:inputType="phone"
            android:drawablePadding="5dp"
            android:hint="@string/phone"
            android:padding="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pass_reg_til"
        android:layout_margin="10dp"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reg_pass_et"
            android:textSize="18sp"
            android:fontFamily="@font/lato_regular"
            android:inputType="textEmailAddress"
            android:drawablePadding="5dp"
            android:hint="@string/pass"
            android:padding="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reg_btn"
        android:text="@string/register"
        android:fontFamily="@font/lato_regular"
        android:layout_gravity="center_horizontal"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alreadyuser_text_view"
        android:text="@string/already_user"
        android:textSize="15sp"
        android:fontFamily="@font/lato_regular"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        />



</LinearLayout>