<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:id="@+id/name_reset"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:fontFamily="@font/lato_regular"
            android:textSize="20sp"
            android:layout_weight="0.5"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/latobold"
            android:textSize="20sp"
            android:id="@+id/profile_nametv"
            tools:text="Himanshu Wasan"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_nameedit"
            android:src="@drawable/ic_baseline_create_24"
            />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:textColor="@color/black"
        android:id="@+id/email_reset"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"

            android:fontFamily="@font/lato_regular"
            android:textSize="20sp"
            android:layout_weight="0.5"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="20sp"
            android:fontFamily="@font/latobold"
            android:id="@+id/profile_emailtv"
            tools:text="xyz@gmail.com"
            />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/phone_reset"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_p"
            android:fontFamily="@font/lato_regular"
            android:textSize="20sp"
            android:layout_weight="0.5"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="20sp"
            android:fontFamily="@font/latobold"
            android:id="@+id/profile_phonetv"
            tools:text="12345678920"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_phoneedit"
            android:src="@drawable/ic_baseline_create_24"
            />
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Requirements"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:fontFamily="@font/latobold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:src="@drawable/gloves"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:src="@drawable/sanitizer"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:src="@drawable/mask"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:src="@drawable/soap"
            />


    </LinearLayout>
    </LinearLayout>




    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:lineSpacingMultiplier="1.4"
        android:text="@string/prevent_covid"
        android:textSize="16sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:orientation="horizontal"
       android:gravity="center"
        android:id="@+id/besafell"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Be Safe Be Smart"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/latobold"

            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/visitwhobtn"
            android:text="visit WHO"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>



    </LinearLayout>

</ScrollView>